--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.18.5",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "cdbreact": "^1.4.0",
     "chart.js": "^2.9.4",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.10.0",
