--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow/tfjs": "^3.16.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.5",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-switch-button-react": "^1.2.0",
     "cdbreact": "^1.4.0",
     "chart.js": "^2.9.4",
     "react": "^17.0.2",
